# CrawlingObserverAPI

./: .gitignore  main.py  pyproject.toml  requirements.txt  settings.yaml  settings.yaml.example  test_main.ipynb
.github/workflows/: CD.yml  CI.yml
.ipynb_checkpoints/: test_main-checkpoint.ipynb
CrawlingObserverAPI/README/: README.md
CrawlingObserverAPI/lib/Crawling/: __init__.py
README/: README.md  README_Study.txt
lib/Config/: config.py
lib/Crawling/: __init__.py
lib/Crawling/.olddata/: symbols.json  unsupported_symbols.json
lib/Crawling/Financial/: Finance.py  Fred.py  YFinance.py  __init__.py
lib/Crawling/Interfaces/: Crawler.py  CrawlerUsingRequest.py  Crawler_handlers.py  Scheduler.py  Unused_CrawlerUsingAPI.py
lib/Crawling/News/: Investing.py  Yahoo.py  __init__.py
lib/Crawling/Reports/: Investing_report.py  Investiong_report.py  __init__.py
lib/Crawling/Stock/: YFinance_stock.py  __init__.py  cik2ticker.json  shares_cache.json  yf_daily.py  yf_market.py  yf_quarterly.py
lib/Crawling/config/: headers.py  (+10 more)
lib/Datas/: crawled_data_20250317_195232_InvestingReports_0_ffee68b7.csv  crawled_data_20250317_195233_cash_flow_2_79bc6322.csv  crawled_data_20250317_195233_income_statement_0_36ecd177.csv  crawled_data_20250317_195234_YahooNews_0_79426d10.csv  crawled_data_20250317_195237_macro_0_039f4bf0.csv  crawled_data_20250321_194752_balance_sheet_1_0557a898.csv  crawled_data_20250321_194752_macro_0_af0bbbc3.csv
lib/Exceptions/: exceptions.py  traceback.py
lib/Logger/: logger.py
tests/: df.ipynb  imsi.ipynb  test_main.py  test_settings.yaml
(+34 files in other folders)
