[project]
name = "CrawlingObserver"
version = "0.1.0"
description = ""
authors = [
    {name = "Han-Dong-Jin",email = "handj25@gmail.com"}
]
readme = "README/README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fredapi (>=0.5.2,<0.6.0)",
    "datetime (>=5.5,<6.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "urllib3 (<2)",
    "cloudscraper (>=1.2.71,<2.0.0)",
    "requests-html (>=0.10.0,<0.11.0)",
    "lxml-html-clean (>=0.4.1,<0.5.0)",
    "yfinance (>=0.2.54,<0.3.0)",
    "tabulate (>=0.9.0,<0.10.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
